@@ -881,7 +881,7 @@ public class SOCBoardLarge extends SOCBoard
 
                     // OK to add
                     if (hasLand)
-                        legalRoadEdges.add(new Integer(edge));
+                        legalRoadEdges.add(Integer.valueOf(edge));
                         // it's ok to add if this set already contains an Integer equal to that edge.
                 }
             }
@@ -2548,7 +2548,7 @@ public class SOCBoardLarge extends SOCBoard
             || ((hexLayoutLg[r][c] <= MAX_LAND_HEX_LG)
                 && (hexLayoutLg[r][c] != WATER_HEX)) )
         {
-            addTo.addElement(new Integer((r << 8) | c));
+            addTo.addElement(Integer.valueOf((r << 8) | c));
         }
     }
 
@@ -2922,7 +2922,7 @@ public class SOCBoardLarge extends SOCBoard
             final int er = r + offs[i];  ++i;
             final int ec = c + offs[i];  ++i;
             if (isEdgeInBounds(er, ec))
-                edge.addElement(new Integer( (er << 8) | ec ));
+                edge.addElement(Integer.valueOf( (er << 8) | ec ));
         }
         return edge;
     }
@@ -3022,8 +3022,8 @@ public class SOCBoardLarge extends SOCBoard
     {
         Vector<Integer> nodes = new Vector<Integer>(2);
         final int[] narr = getAdjacentNodesToEdge_arr(coord);
-        nodes.addElement(new Integer(narr[0]));
-        nodes.addElement(new Integer(narr[1]));
+        nodes.addElement(Integer.valueOf(narr[0]));
+        nodes.addElement(Integer.valueOf(narr[1]));
         return nodes;
     }
 
@@ -3169,34 +3169,34 @@ public class SOCBoardLarge extends SOCBoard
         {
             // North: (r-1, c)
             if (r > 1)
-                hexes.addElement(new Integer(nodeCoord - 0x0100));
+                hexes.addElement(Integer.valueOf(nodeCoord - 0x0100));
 
             if (r < (boardHeight-1))
             {
                 // SW: (r+1, c-1)
                 if (c > 1)
-                    hexes.addElement(new Integer((nodeCoord + 0x0100) - 1));
+                    hexes.addElement(Integer.valueOf((nodeCoord + 0x0100) - 1));
 
                 // SE: (r+1, c+1)
                 if (c < (boardWidth-1))
-                    hexes.addElement(new Integer((nodeCoord + 0x0100) + 1));
+                    hexes.addElement(Integer.valueOf((nodeCoord + 0x0100) + 1));
             }
         }
         else
         {
             // South: (r+1, c)
             if (r < (boardHeight-1))
-                hexes.addElement(new Integer(nodeCoord + 0x0100));
+                hexes.addElement(Integer.valueOf(nodeCoord + 0x0100));
 
             if (r > 1)
             {
                 // NW: (r-1, c-1)
                 if (c > 1)
-                    hexes.addElement(new Integer((nodeCoord - 0x0100) - 1));
+                    hexes.addElement(Integer.valueOf((nodeCoord - 0x0100) - 1));
 
                 // NE: (r-1, c+1)
                 if (c < (boardWidth-1))
-                    hexes.addElement(new Integer((nodeCoord - 0x0100) + 1));
+                    hexes.addElement(Integer.valueOf((nodeCoord - 0x0100) + 1));
             }
         }
 
